# hisi-panic-handler

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml
src/: halt.rs  lib.rs  uart0.rs
